# coursework_5_flask

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  app.py  cofig.py  config.py  controler.py  docker-compose.yaml  exceptions.py  mypy.ini  pyproject.toml  run.sh  server.py
game/: hero.py  personages.py  skills.py  utils.py
game/Models/: equipment_models.py  game.py  personage_models.py  skill_models.py
templates/: fight.html  hero_choosing.html
